      including backporting of the XORG_VERSION_CURRENT change.
    - patches.xorg/1.18.4/xorg-server-configure-ac.patch: add -lz and also
      -ljpeg and -lpng to be on the safe side, since it seems that these
      libraries are universally missing.
    - Makefile.am: add print-debugging to figure out what is being generated
      on Ubuntu 16.04/xenial.
  * debian/control:
    + Grammar fix.
    + Remove dependencies that refer to disabled features.
    + Add build-dependency upon libpam-dev. It would really be libpam0g-dev
      currently, but that looks like a moving target.
    + Add B-D upon x11proto-gl-dev (or nil/hello).
    + Recommend x2goserver >= 4.1.0.4, we'll better stay on the 4.1.x line.
    + Try to pull libxfont1-dev (for old Ubuntu versions such as 16.04/xenial
      that don't support building X.Org against libXfont2) and fallback to
      libxfont-dev to retain the old, default behavior.
    + Make libxfont1-dev an entirely optional dependency and libxfont-dev a
      hard one. This should always install libxfont-dev (which typically is
      the libXfont2-version), but also the libXfont1-version if available.
      Ubuntu 16.04/xenial has X.Org Server 1.18.4 which is not compatible with
      libXfont2, but Debian 9/stretch uses X.Org Server 1.19.2, which is
      compatible with libXfont2 (and actually requires it), but also has both
      packages available.
    + Depend upon libxfont1-dev << 1.5.2 (which is the version in Debian
      9/stretch) or fall back to libxfont-dev *and* make sure that the
      libxfont1-dev version is greater than 1.4.2. This should essentially
      emulate libxfont1-dev (>> 1.4.2 << 1.5.2) | libxfont-dev (>> 1.4.2) and
      fix issues with "hello" being picked with subsequent dependencies being
      dropped (like libunwind, which is usually not optional).
  * x2gokdrive.spec:
    + Drop Debian-style formatting in description.
    + Typo fixes.
    + Remove empty line at EOF.