@@ -68,6 +68,7 @@ x2gokdrive (0.0.0.1-0x2go1) UNRELEASED; urgency=medium
       libraries are universally missing.
     - Makefile.am: add print-debugging to figure out what is being generated
       on Ubuntu 16.04/xenial.
+    - Makefile.am: revert print-debugging again.
   * debian/control:
     + Grammar fix.
     + Remove dependencies that refer to disabled features.
